# gif-controls

./: .gitignore  LICENSE  Makefile  README.md  eslint.config.js  package-lock.json  package.json  wxt.config.ts
decoder/: Cargo.toml
decoder/src/: lib.rs  util.rs
decoder/test-resources/expected/: 1bpp.bin.xz  1bpp.json  dispose1.bin.xz  dispose2.bin.xz  dispose3.bin.xz  earth-transparent.bin.xz  earth.bin.xz  interlaced.bin.xz  interlaced.json  local-color-table.bin.xz
decoder/test-resources/input/: credits.md
decoder/tests/: tests.rs
decoder/tests/util/: mod.rs
webextension/assets/: player.css
webextension/components/: BackgroundImage.svelte  IconButton.svelte  MoveHandle.svelte  Options.svelte  Player.svelte  PlayerLoader.svelte  ProgressBar.svelte  Resizer.svelte
webextension/entrypoints/: background.ts  player.content.ts  worker.ts
webextension/entrypoints/offscreen/: index.html  offscreen.ts
webextension/entrypoints/options/: index.html  options-page.css  options-page.ts
webextension/lib/: constants.ts  gif.ts  messages.ts  options.ts  polyfills.ts  utils.ts
webextension/utils/: constants.ts  options.ts
