[package]
name = "gif-controls-decoder"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.bench]
debug = true

[dependencies]
byteorder = "1.5.0"
thiserror = "2.0.11"
wasm-bindgen = "0.2.100"

[dev-dependencies]
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
xz2 = "0.1.7"
